[project]
name = "bookshelf"
version = "0.1.0"
description = "API REST d'apprentissage"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
